# Ignore

./: LICENSE  Makefile  README.md  __main__.py  config.yaml  fix_scope.py  pyproject.toml  requirements-dashboard.txt  requirements.txt  run_ctf.py  setup.py  test_autonomous.py
cybershell/: advanced_ai_orchestrator.py  advanced_idor_hunter.py  agent.py  autonomous_orchestration_engine.py  benchmarking_framework.py  business_impact_reporter.py  bypass_techniques.py  chat.py  config.py  continuous_learning_pipeline.py  enhanced_payload_manager.py  external_tools.py  fingerprint.py  fingerprinter.py  kb.py  learning.py  llm.py  llm_connectors.py  mapper.py  memory.py  miner.py  ods.py  orchestrator.py  payload_manager.py  philosophy.py  planner.py  plugin_loader.py  plugins.py  rate_limiter.py  reporting.py  schemas.py  scoring.py  signals.py  strategies.py  unified_config.py  validation_framework.py  vulnerability_kb.py
cybershell/adaptive/: __init__.py  hitl.py  metrics.py  persistence.py  statemachine.py  train.py
dashboard/: streamlit_app.py
docs/: ENHANCED_FEATURES.md  FINGERPRINTING_AND_PAYLOAD_SELECTION.md  targets_xss_idor_cmdi.md
knowledge_base/: vulnerability_kb.json
plugins_user/: TemplateEvidencePlugin.py  advanced_payload_plugin.py  advanced_sqli_plugin.py  anti_automation_plugin.py  artifact_handling_plugin.py  business_logic_plugin.py  crypto_exploitation_plugin.py  cve_research_plugin.py  exploitation_chain_plugin.py  exploitation_plugins.py  protocol_specific_plugin.py  self_healing_plugin.py  state_manager_plugin.py
tests/: test_main.py
(+9 files in other folders)
