[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybershell"
version = "2.0.0"
description = "Autonomous Bug Bounty & CTF Hunting Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CyberShellCode"},
]
maintainers = [
    {name = "CyberShellCode"},
]
keywords = ["security", "bug-bounty", "ctf", "exploitation", "pentesting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/CyberShellCode/CyberShellV2"
Documentation = "https://github.com/CyberShellCode/CyberShellV2/wiki"
Repository = "https://github.com/CyberShellCode/CyberShellV2"
Issues = "https://github.com/CyberShellCode/CyberShellV2/issues"

[project.scripts]
cybershell = "__main__:main"
cs = "__main__:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pylint]
max-line-length = 100
disable = ["C0111", "R0903", "R0913"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
